Renames css file to match component. Fixes bug that shows next problem before clicking next. Adds spacing on menu top and adjust height to be 100 vh

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
 body {
-  font-family: 'Lato';
+	font-family: 'Lato';
+	height: 100vh;
 }
